# biowatch-app

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
ui/: Main.qml  Splash.qml  Start.qml  Theme.qml
ui/components/: IconButton.qml  StatItem.qml
ui/dashboards/: BatteryHealth.qml  BatteryLevel.qml  BloodO2.qml  Calories.qml  HeartRate.qml  Home.qml  Info.qml  Settings.qml  Steps.qml  Weather.qml
